Bug 1637955 - Fix vertical scrolling regresstion in the response panel r=Honza
- Fix the 1px scrollbar issue in the headers panel
 - Allow scrolling for the properties view in the response panel

Differential Revision: https://phabricator.services.mozilla.com/D75671

UltraBlame original commit: d711a889379bca7f182da0756730e7ac4d054576

--- a/devtools/client/netmonitor/src/assets/styles/NetworkDetailsBar.css
+++ b/devtools/client/netmonitor/src/assets/styles/NetworkDetailsBar.css
@@ -472,7 +472,7 @@ width
 ;
 overflow
 :
-hidden
+auto
 ;
 flex
 :
@@ -1512,6 +1512,24 @@ hidden
 position
 :
 relative
+;
+}
+.
+network
+-
+monitor
+.
+headers
+-
+panel
+-
+container
+.
+treeTable
+{
+overflow
+:
+hidden
 ;
 }
 .
